--- a/docs/styles.css
+++ b/docs/styles.css
@@ -5,7 +5,7 @@
 :root{
   /* Provided color scheme */
   --vx-bg:#E4CDE6;
- /* I was lazy Green is Purple, Orange is yellow *?
+ /* I was lazy Green is Purple, Orange is yellow */
   --vx-green:#94157B;
   --vx-green-2:#AD2A94;
   --vx-orange:#FFD84D;
